8 Topic area vision text overlapping issue fixes

--- a/frontend/web/less/mobile/topic.less
+++ b/frontend/web/less/mobile/topic.less
@@ -348,7 +348,7 @@
                     background-color: #fff;
                     .post-row{
                         border-bottom: 1px solid #e4e4e4;
-                        padding: 10px;
+                        padding: 10px 7px;
                         height: 74px;
                         .avatar{
                             width: 50px;
@@ -403,7 +403,7 @@
                         }
                         .action{
                             float: right;
-                            width: 68px;
+                            width: 60px;
                             text-align: center;
                             .brilliant{
                                 font-family: "Verdana";
@@ -422,6 +422,7 @@
                                 color: #5888ac;
                                 cursor: pointer;
                                 text-align: right;
+                                font-size: 12px;
                                 .fa{
                                     margin-right: 5px;
                                 }
